installer/k8s-artefacts/observability/portal/observability-portal.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-portal
  namespace: cellery-system
  labels:
    app: observability-portal
spec:
  selector:
    matchLabels:
      app: observability-portal
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: observability-portal
    spec:
      containers:
      - image: wso2cellery/observability-portal
        name: observability-portal
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        ports:
        - containerPort: 3000
          protocol: "TCP"
        volumeMounts:
        - name: observability-portal-config
          mountPath: /portal/config
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
      imagePullSecrets:
      - name: wso2creds
      serviceAccountName: cellerysvc-account
      volumes:
      - name: observability-portal-config
        configMap:
          name: observability-portal-config
---
apiVersion: v1
kind: Service
metadata:
  name: observability-portal
  namespace: cellery-system
  labels:
    app: observability-portal
spec:
  ports:
    - name: 'http'
      port: 3000
      protocol: TCP
  selector:
    app: observability-portal
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: observability-portal
  namespace: cellery-system
  labels:
      app: observability-portal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: cellery-dashboard
    http:
      paths:
      - path: /
        backend:
          serviceName: observability-portal
          servicePort: 3000
